public/css/style.css
/* ... */
.player-page {
	float: left;
	width: 50%;
	padding: 10px;
	box-sizing: border-box;
}
.player-page button {
	margin-left: 10px;
	width:22%;
}
iframe#player {
	width: 100%;
	height: 300px;
}
.player-page.playerFull {
	width: 100%;
}
.player-page.playerFull iframe#player {
	height: 500px;
}
.threecol>div {
	float: left;
	width: 32.4%;
	box-sizing: border-box;
	padding: 30px 60px;
	margin: 0 10px 10px 0;
	color: #fff;
	background: rgba(12, 33, 51, 0.8);
	text-align: center;
	min-height: 315px;
	border: 3px solid rgba(14, 45, 60, 0.7);
}
.threecol>div p {
	padding: 0 60px;
}
.delay-container {
	margin: 10px 0;
}
.datatable-half {
	width: 60%!important;
}
table.datatable thead th {
	padding: 10px 6px 10px 30px;
}

/* =============================================================================
	moderation
   ========================================================================== */

.error {
	margin:0 auto;
	display: block;
	text-align: center;
}
.error h1 {
	font-size:7em;
}
.error img {
	margin:20px 0;
}
.error p {
	font-size:2em;
}

/* =============================================================================
	chatlog
   ========================================================================== */

.chatlogs {
	border:3px solid rgba(14, 45, 60, 0.7);
	width:80%;
	padding:20px;
	max-height:calc(100vh - 300px);
	overflow-y:auto;
}
.chatlogs .date {
	display: block;
	float:left;
	margin:0 10px 0 0;
}
.chatlogs .displayName {
	display: block;
	float:left;
	margin:0 10px 0 0;
}

.chat-search label span {margin-right: 10px;}
.chat-search label span i {margin-left: 10px;}
.chat-search input[type="date"] {
	line-height: inherit;
}

/* =============================================================================
	moderation
   ========================================================================== */

.moderation-songlist {
	float: left;
	width: 100%;
	padding: 10px;
	box-sizing: border-box;
}
.chatbox {
	width: 339px;
	height: 93%;
	float: right;
	position: relative;
	top:-50px;
}
.chatbox iframe {
	width: 100%;
	height: 100%;
	/*min-height:600px;*/
	height: calc(100vh - 250px);
}
.song-container {
	width: 74%;
	float: left;
	height: 90%;
}
.volumeContainer {
	width: 95%;
	float: left;
}
.control-buttons.moderation {
	width: 75%;
	float: left;
}
.control-buttons.moderation .blue-styled-button {
	margin: 10px;
	font-size: 20px;
	width: 90px;
	padding: 8px 30px;
}
.linktoshare {
	float: right;
	width: 100%;
	display: none;
}
.linktoshare span {
	float: left;
	padding-top: 5px;
}
.linktoshare input {
	margin-top: 0;
	width: 82%;
	float: right;
}
.darkinput {
	background: #2e383f;
	border: 0;
	padding: 5px;
	color: #fff;
}
.slider {
	float: right;
	margin-top: 0;
}
#volumeRange {
	width: 85%;
	float: left;
	margin-top: 18px;
}
#volumeInput {
	float: right;
	width: 13%;
	margin-top: 5px;
}
.moderation-number {
	width: 9px!important;
}

.moderationBtns {
	float:right;
	width:100px;
}

/* =============================================================================
	documentation
   ========================================================================== */

.documentation-wrapper {
	color: #fff;
	float: none;
	/*background:#f00;*/
	width:calc(100% - 285px);
	float: right;
	margin:10px 0 10px 0;
	transition:transform 0.5s;
}
section.content {
	/*background:#154671;*/
	width:100%;
	padding:20px;
	display: block;
}
section.content h1 {
	margin-top: 0;

}
.documentation-wrapper {
	margin-top: 75px;
}
.documentation-wrapper li {
	margin-top: 15px;
}

.documentation-wrapper code {
	background:#154671;
	color:#fff;
	margin-right: 5px;
	padding:4px 8px;
}

body.documentation .navbar {
	position: fixed;
	float:none;
	z-index:12;
}

body.documentation .left-bar {
	position: fixed;
	float:left;
	margin-top: 50px;
}

body.documentation .left-bar .doc-nav {
	/*margin-top: 40px;*/
}
body.documentation .left-bar .doc-nav h4 {
	color: #fff;
	text-align: left;
}
body.documentation .left-bar .doc-nav h4 i {
	float: right;
}
body.documentation .left-bar .doc-nav h4 a {
	color: #fff;
	display: block;
	padding: 10px 0;
}
body.documentation .left-bar .doc-nav h4 a:hover {
	text-decoration: none;
}
body.documentation .left-bar .doc-nav ul {
	list-style-type: none;
	text-align: left;
	padding-left: 0;
	margin-left: 0;
}
body.documentation .left-bar .doc-nav ul li {}
body.documentation .left-bar .doc-nav ul li a {
	color: #428bca;
	padding: 10px 20px 10px 25px;
	display: block;
}
body.documentation .left-bar .doc-nav ul li a i {
	padding: 0 10px;
}
body.documentation .left-bar .doc-nav ul li a.current-page {
	color: #fff;
	/*text-decoration: underline;*/
}
body.documentation .left-bar .doc-nav ul li a.current-page i {
	color: #fff;
}

/* =============================================================================
	helpers
   ========================================================================== */

.clear {
	clear: both;
}
.clearfix:before, .clearfix:after {
	content: "";
	display: table;
}
.clearfix:after {
	clear: both;
}
.clearfix {
	zoom: 1;
}
.blue-highlight {
	color: #428bca;
}
.dark-blue-highlight {
	color: #215f94;
}
table.dataTable {
	display: table;
}
.right {
	float: right;
}

.left {
	float:left;
}

.dont-hide {display: block!important;}
.navbar a.navstatus {display: none;}

.navbar-nav {
		float: right;
	}

/* =============================================================================
	media queries
   ========================================================================== */

@media screen and (max-width:1850px) {
	.left-bar .main-nav ul li a {padding: 10px 0;}
	.inner-content-wrapper {
		width:80%;
		float: right;
	}
	.control-buttons.moderation,.song-container {
		width:68%;
	}


	.statbox-container {
		clear:left;
	}
	.statbox {
		padding:10px 30px;
	}
	.topchatters {
		width:55%;
		padding:10px 30px;
	}
}
/* ... */

